@@ -3,6 +3,8 @@ YATC 0.9.9:
     1. Mounter class added.
 
   post-install.sh:
+    1. Switch from autofs to mounter.
+    2. 2xclient version bumped to 14.1.3417.
 
 YATC 0.9.8:
   yatc.py:
